--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "accelerate==0.30.0",
     "evaluate==0.4.6",
     "faiss-gpu>=1.7.2",
+    "numpy<2.0.0",
     "pandas==2.3.3",
+    "scikit-learn>=1.7.2",
     "transformers==4.39.3",
 ]
