--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,13 @@ dependencies = [
     "accelerate==0.30.0",
     "evaluate==0.4.6",
     "faiss-gpu>=1.7.2",
+    "langchain>=0.3.27",
+    "langchain-community>=0.3.21",
+    "langchain-huggingface>=0.3.1",
     "numpy<2.0.0",
     "pandas==2.3.3",
+    "rank-bm25>=0.2.2",
     "scikit-learn>=1.7.2",
-    "transformers==4.39.3",
+    "sentence-transformers>=5.1.2",
+    "transformers>=4.42.0",
 ]
