--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10.13"
 dependencies = [
-    "accelerate==0.30.0",
+    "accelerate>=0.31.0",
     "evaluate==0.4.6",
     "faiss-gpu>=1.7.2",
     "kiwipiepy>=0.22.1",
