--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ raw/data/faiss_BAAI_bge-m3_chunk1000_overlap100.index
 raw/data/faiss_telepix_PIXIE-Rune-Preview_chunk1000_overlap100.index
 raw/data/bm25_wiki_chunk1000_overlap200_v2.pkl
 raw/data/faiss_telepix_PIXIE-Rune-Preview_chunk1000_overlap200_v2.index
+raw/data/bm25_wiki_chunk1000_overlap200_v3.pkl
