--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ raw/data/faiss_telepix_PIXIE-Rune-Preview_chunk1000_overlap100.index
 raw/data/bm25_wiki_chunk1000_overlap200_v2.pkl
 raw/data/faiss_telepix_PIXIE-Rune-Preview_chunk1000_overlap200_v2.index
 raw/data/bm25_wiki_chunk1000_overlap200_v3.pkl
+raw/data/faiss_telepix_PIXIE-Rune-Preview_chunk1000_overlap200_v3.index
+raw/data/wiki_chunks_1000_overlap200.pkl
