--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pandas==2.3.3",
     "rank-bm25>=0.2.2",
     "scikit-learn>=1.7.2",
+    "scipy>=1.15.3",
     "seaborn>=0.13.2",
     "sentence-transformers>=5.1.2",
     "slack-bolt>=1.27.0",
