--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,13 @@ raw/data/faiss_telepix_PIXIE-Rune-Preview_chunk1000_overlap200_v2.index
 raw/data/bm25_wiki_chunk1000_overlap200_v3.pkl
 raw/data/faiss_telepix_PIXIE-Rune-Preview_chunk1000_overlap200_v3.index
 raw/data/wiki_chunks_1000_overlap200.pkl
+raw/data/sparse_telepix_PIXIE-Splade-Preview_chunk1000_overlap200_v3.npz
+
+# prediction
+code/predictions/roberta_large_top10
+code/predictions/roberta_large_top3
+code/predictions/roberta_large_top2
+code/predictions/roberta_large_top1
+code/predictions/roberta_large
+code/predictions/baseline_real
+
