--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "accelerate>=0.31.0",
     "evaluate==0.4.6",
     "faiss-gpu>=1.7.2",
+    "flagembedding>=1.3.5",
     "kiwipiepy>=0.22.1",
     "langchain>=0.3.27",
     "langchain-community>=0.3.21",
