feat: Hybird search with qdrant vectorstore

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ code/predictions/roberta_large
 code/predictions/baseline_real
 
 raw/data/sparse_bge_m3_chunk1000_overlap200_v3.npz
+
+# wandb
+wandb/
